# geo-construction-prover

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.f101  common.cpp  common.h  formula.cpp  formula.h  main.cpp  prover.cpp  prover.h  theory.cpp  theory.h
problems/: example3.p  example_AHaHb.p  example_AHbHc.p  example_AOHb.p  examples1.p  examples2.p  examples3.p
